test/libsolidity/syntaxTests/nameAndTypeResolution/351_callcode_deprecated.sol
contract test {
    function f() pure public {
        address('lat1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqjj3r8ur').callcode;
    }
}
// ----
// TypeError 2256: (55-117): "callcode" has been deprecated in favour of "delegatecall".
